--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
     <!-- navlogo section  -->
     <nav>
       <div class="flex justify-center items-center my-5">
-        <img src="../images/logo.png" alt="nav logo" class="w-30" />
+        <img src="./images/logo.png" alt="nav logo" class="w-30" />
       </div>
     </nav>
 
     <!-- hero section  -->
     <section class="w-full">
       <div class="relative  ">
-        <img src="../images/page-title.jpg" alt="banar" class="w-full h-[240px] " />
+        <img src="./images/page-title.jpg" alt="banar" class="w-full h-[240px] " />
         <div class="absolute top-10 sm:top-15 text-center w-full leading-6 px-2">
           <p
             class="text-white capitalize text-4xl font-bold  mb-2 md:px-0 lg:px-0 xl:px-130  leading-9   "
